@@ -2,6 +2,7 @@ Revision history for Datahub-Factory-VKC
 
 {{$NEXT}}
 
+    - Changed: remove stale PID module.
     - Changed: added AAT & Creators SQLite generation to KMSKA module.
 
 0.92  2017-09-06 10:59:08 CEST
